# instrument-app

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-organic-synthesis-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-organic-synthesis-control/checklists/: requirements.md
specs/001-organic-synthesis-control/contracts/: mock-mode.md  self-test-report.schema.json  status-bar-state.schema.json  workflow-step-mapping.md
src/instrument_app/: __init__.py
src/instrument_app/app/: __init__.py  application_context.py  main.py
src/instrument_app/domain/: __init__.py  app_config.py  parameter_validation.py  phase_script_router.py  recipe_factory.py  recipe_models.py  run_coordinator.py  run_models.py
src/instrument_app/hal/: __init__.py
src/instrument_app/logging/: __init__.py  alarm_log.py  debug_device.py  log.py
src/instrument_app/persistence/: __init__.py  recipe_repository.py
src/instrument_app/ui/: app_theme.py  debug_device_page.py  (+11 more)
tests/: test_alarm_log.py  test_app_theme.py  test_debug_device_log.py  test_mock_hal_phase7.py  test_parameter_validation.py  test_recipe_repository.py  test_self_test_orchestrator.py  test_status_bar_state.py
(+17 files in other folders)
