[project]
name = "instrument-app"
version = "0.1.0"
description = "Organic synthesis instrument control (GUI + workflow)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.6"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
instrument-app = "instrument_app.app.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"instrument_app.ui" = ["styles/*.qss"]
